--- a/portfolio.html
+++ b/portfolio.html
@@ -20,24 +20,24 @@
 <body>
 <header class="header">
 
-    <div class="conteiner">
-        <a href="./index.html" lang="en" class="logo">Web<span class="part-logo">Studio</span></a>
+    <div class="conteiner header__conteiner">
+        <a href="./index.html" lang="en" class="logo header__logo">Web<span class="logo__part">Studio</span></a>
 
         <nav>
             <ul class="nav-list">
-                <li><a href="./index.html" class="nav-list item">Студія</a></li>
-                <li><a href="./portfolio.html" class="nav-list item current">Портфоліо</a></li>
-                <li><a href="" class="nav-list item">Контакти</a></li>
+                <li><a href="./index.html" class="nav-list__link">Студія</a></li>
+                <li><a href="./portfolio.html" class="nav-list__link nav-list__link--current">Портфоліо</a></li>
+                <li><a href="" class="nav-list__link">Контакти</a></li>
             </ul>
         </nav>
 
         <ul class="contact-list">
-            <li><a href="mailto:info@devstudio.com" class="contact-list item">
-                    <svg class="mail icon" width="20" height="16">
+            <li><a href="mailto:info@devstudio.com" class="contact-list__link">
+                    <svg class="contact-list__icon" width="20" height="16">
                         <use href="./images/icons.svg#icon-konvert"></use>
                     </svg>info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="contact-list item">
-                    <svg class="tel icon" width="16" height="22">
+            <li><a href="tel:+380961111111" class="contact-list__link">
+                    <svg class="contact-list__icon" width="16" height="22">
                         <use href="./images/icons.svg#icon-smartphone"></use>
                     </svg>+38 096 111 11 11</a></li>
         </ul>
