Доробив головну сторінку

--- a/portfolio.html
+++ b/portfolio.html
@@ -216,46 +216,60 @@
         </section>
       
     </main>
-<footer>
-    <div class="conteiner">
-        <div class="contacts-footer">
-            <a href="./index.html" lang="en" class="logo">Web<span class="part-logo">Studio</span></a>
-            <address>
-                <ul class="address-list">
-                    <li class="item"><a href="https://goo.gl/maps/AsPyXYZNYXDMEktu9" target="_blank"
-                            rel="noopener nofollow noreferrer" class="adress">м. Київ, пр-т Лесі Українки, 26</a></li>
-                    <li class="item"><a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
-                    <li class="item"><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></li>
+<footer class="footer">
+    <div class="conteiner footer__conteiner">
+        <div class="footer__contacts">
+            <a href="./index.html" lang="en" class="logo footer__logo">Web<span class="footer__part-logo">Studio</span>
+            </a>
+            <address class="footer-address">
+                <ul class="footer-address-list">
+                    <li class="footer-address-list__item">
+                        <a href="https://goo.gl/maps/AsPyXYZNYXDMEktu9" target="_blank"
+                            rel="noopener nofollow noreferrer"
+                            class="footer-address-list__link footer-address-list__link--color-text">
+                            м. Київ, пр-т Лесі Українки, 26
+                        </a>
+                    </li>
+                    <li class="footer-address-list__item">
+                        <a href="mailto:info@devstudio.com" class="footer-address-list__link">
+                            info@devstudio.com
+                        </a>
+                    </li>
+                    <li class="footer-address-list__item">
+                        <a href="tel:+380961111111" class="footer-address-list__link">
+                            +38 096 111 11 11
+                        </a>
+                    </li>
                 </ul>
             </address>
         </div>
         <div class="social-footer">
-            <p class="social-footer title">приєднуйтесь</p>
-            <ul class="social-list-footer">
-                <li class="item">
-                    <a href="">
-                        <svg class="icon" width="20" height="20">
+            <p class="footer-social__title">приєднуйтесь</p>
+            <ul class="footer-social__list">
+                <li class="footer-social__item">
+                    <a href="" class="footer-social__link">
+                        <svg class="footer-social__icon" width="20" height="20">
                             <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                     </a>
                 </li>
-                <li class="item">
-                    <a href="">
-                        <svg class="icon" width="20" height="20">
+                <li class="footer-social__item">
+                    <a href="" class="footer-social__link">
+                        <svg class="footer-social__icon" width="20" height="20">
                             <use href="./images/icons.svg#icon-twiter"></use>
                         </svg>
                     </a>
                 </li>
-                <li class="item">
-                    <a href="">
-                        <svg class="icon" width="20" height="20">
+                <li class="footer-social__item">
+                    <a href="" class="footer-social__link">
+                        <svg class="footer-social__icon" width="20" height="20">
                             <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                     </a>
                 </li>
-                <li class="item">
-                    <a href="">
-                        <svg class=" icon" width="20" height="20">
+                <li class="footer-social__item">
+                    <a href="" class="footer-social__link">
+                        <svg class="footer-social__icon" width="20" height="20">
                             <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                     </a>
@@ -263,13 +277,13 @@
 
             </ul>
         </div>
-        <div class="mailing-footer">
-            <p class="mailing-footer-title">Підпишіться на розсилку</p>
-            <form>
-                <input class="mail-input-footer" type="mail" placeholder="E-mail" name="mail">
-                <button type="submit" class="mailing-footer-button">
+        <div class="footer-mailling">
+            <p class="footer-mailling__title">Підпишіться на розсилку</p>
+            <form class="footer-mailling__form">
+                <input class="footer-mailling__input" type="mail" placeholder="E-mail" name="mail">
+                <button type="submit" class="footer-mailling__btn">
                     Підписатися
-                    <svg class="send icon" width="24" height="24">
+                    <svg class="footer-mailling__icon" width="24" height="24">
                         <use href="./images/icons.svg#icon-send"></use>
                     </svg>
                 </button>
