--- a/portfolio.html
+++ b/portfolio.html
@@ -46,39 +46,63 @@
 </header>
     <main>
         <section class="portfolio">
-            <div class="conteiner">
-                <h1 class="portfolio-title">Portfolio</h1>
-                <ul class="btn-list">
+            <div class="conteiner portfolio__conteiner">
+                <h1 class="portfolio__title">Portfolio</h1>
+                <ul class="portfolio__btn-list">
 
-                    <li class="item"><button type="button" class="btn current">Усі</button></li>
-                    <li class="item"><button type="button" class="btn">Веб-сайти</button></li>
-                    <li class="item"><button type="button" class="btn">Додатки</button></li>
-                    <li class="item"><button type="button" class="btn">Дизайн</button></li>
-                    <li class="item"><button type="button" class="btn">Маркетинг</button></li>
+                    <li class="portfolio__btn-item">
+                        <button type="button" class="portfolio__btn portfolio__btn--current">
+                            Усі
+                        </button>
+                    </li>
+                    <li class="portfolio__btn-item">
+                        <button type="button" class="portfolio__btn">
+                            Веб-сайти
+                        </button>
+                    </li>
+                    <li class="portfolio__btn-item">
+                        <button type="button" class="portfolio__btn">
+                            Додатки
+                        </button>
+                    </li>
+                    <li class="portfolio__btn-item">
+                        <button type="button" class="portfolio__btn">
+                            Дизайн
+                        </button>
+                    </li>
+                    <li class="portfolio__btn-item">
+                        <button type="button" class="portfolio__btn">
+                            Маркетинг
+                        </button>
+                    </li>
                                                                 
                 </ul>
             
-                <ul class="portfolio-list">
-                    <li class="item">
-                       <a href="#" class="portfolio-list-link">
-                           <div class="pic-box">
-                                <img src="./images/technocrack-min.jpg" alt="сторінка веб-сайту на екрані ноутбука" width="370" height="294">
-                                <div class="overlay-portfolio">
+                <ul class="portfolio__list">
+                    <li class="portfolio__item">
+                       <a href="#" class="portfolio__link">
+                           <div class="portfolio__pic-box">
+                                <img src="./images/technocrack-min.jpg" 
+                                alt="сторінка веб-сайту на екрані ноутбука" 
+                                width="370" height="294">
+                                <div class="portfolio__overlay">
                                     <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
                                         вичерпні відомості про компанію чи приватну особу.
                                     </p>
                                 </div>
                             </div>
-                            <div class="portfolio-card">
-                                <h2 class="title">Технокряк</h2>
-                                <p class="text">Веб-сайт</p>
+                            <div class="portfolio__card">
+                                <h2 class="portfolio__card-title">Технокряк</h2>
+                                <p class="portfolio__card-text">Веб-сайт</p>
                             </div>
                         </a>
                     </li>
-                    <li class="item">
+                    <li class="portfolio__item">
                         <a href="Дизайн" class="portfolio-list-link">
                             <div class="pic-box">
-                                <img src="./images/poster-new-orlean-min.jpg" alt="постер спортивного заходу" width="370" height="294">
+                                <img src="./images/poster-new-orlean-min.jpg"
+                                alt="постер спортивного заходу" 
+                                width="370" height="294">
                                 <div class="overlay-portfolio">
                                     <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
                                         отримати
@@ -92,7 +116,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="item">
+                    <li class="portfolio__item">
                         <a href="" class="portfolio-list-link">
                             <div class="pic-box">
                                 <img src="./images/restoran-seafood-min.jpg" alt="логотип ресторану" width="370" height="294">
@@ -109,7 +133,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="item">
+                    <li class="portfolio__item">
                         <a href="" class="portfolio-list-link">
                             <div class="pic-box">
                                 <img src="./images/project-prime-min.jpg" alt="накладні навушники" width="370" height="294">
@@ -126,7 +150,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="item">
+                    <li class="portfolio__item">
                         <a href="" class="portfolio-list-link">
                             <div class="pic-box">
                                 <img src="./images/project-boxes-min.jpg" alt="дві картонні коробки" width="370" height="294">
@@ -143,7 +167,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="item">
+                    <li class="portfolio__item">
                         <a href="" class="portfolio-list-link">
                             <div class="pic-box">
                                 <img src="./images/inspiration-has-no-borders-min.jpg" alt="монітор компютера із відкритою сторінкою" width="370" height="294">
@@ -160,7 +184,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="item">
+                    <li class="portfolio__item">
                         <a href="" class="portfolio-list-link">
                             <div class="pic-box">
                                 <img src="./images/magazine-limited-edition-min.jpg" alt="розгорнутий кольоровий журнал" width="370" height="294">
@@ -177,7 +201,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="item">
+                    <li class="portfolio__item">
                         <a href="" class="portfolio-list-link">
                             <div class="pic-box">
                                 <img src="./images/project-lab-min.jpg" alt="паперовий ярлик на мотузці" width="370" height="294">
@@ -194,7 +218,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="item">
+                    <li class="portfolio__item">
                         <a href="" class="portfolio-list-link">
                             <div class="pic-box">
                                 <img src="./images/growing-business-min.jpg" alt="дві руки на клавіатурі ноутбука" width="370" height="294">
