Переробив класи по БЕМ

--- a/portfolio.html
+++ b/portfolio.html
@@ -98,140 +98,140 @@
                         </a>
                     </li>
                     <li class="portfolio__item">
-                        <a href="Дизайн" class="portfolio-list-link">
-                            <div class="pic-box">
+                        <a href="Дизайн" class="portfolio__link">
+                            <div class="portfolio__pic-box">
                                 <img src="./images/poster-new-orlean-min.jpg"
                                 alt="постер спортивного заходу" 
                                 width="370" height="294">
-                                <div class="overlay-portfolio">
+                                <div class="portfolio__overlay">
                                     <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
                                         отримати
                                         вичерпні відомості про компанію чи приватну особу.
                                     </p>
                                 </div>
                             </div>
-                            <div class="portfolio-card">
-                                <h2 class="title">Постер New Orlean vs Golden Star </h2>
-                                <p class="text">Дизайн</p>
+                            <div class="portfolio__card">
+                                <h2 class="portfolio__card-title">Постер New Orlean vs Golden Star </h2>
+                                <p class="portfolio__card-text">Дизайн</p>
                             </div>
                         </a>
                     </li>
                     <li class="portfolio__item">
-                        <a href="" class="portfolio-list-link">
-                            <div class="pic-box">
+                        <a href="" class="portfolio__link">
+                            <div class="portfolio__pic-box">
                                 <img src="./images/restoran-seafood-min.jpg" alt="логотип ресторану" width="370" height="294">
-                                <div class="overlay-portfolio">
+                                <div class="portfolio__overlay">
                                     <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
                                         отримати
                                         вичерпні відомості про компанію чи приватну особу.
                                     </p>
                                 </div>
                             </div>
-                            <div class="portfolio-card">
-                                <h2 class="title">Ресторан Seafood </h2>
-                                <p class="text">Додаток</p>
+                            <div class="portfolio__card">
+                                <h2 class="portfolio__card-title">Ресторан Seafood </h2>
+                                <p class="portfolio__card-text">Додаток</p>
                             </div>
                         </a>
                     </li>
                     <li class="portfolio__item">
-                        <a href="" class="portfolio-list-link">
-                            <div class="pic-box">
+                        <a href="" class="portfolio__link">
+                            <div class="portfolio__pic-box">
                                 <img src="./images/project-prime-min.jpg" alt="накладні навушники" width="370" height="294">
-                                <div class="overlay-portfolio">
+                                <div class="portfolio__overlay">
                                     <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
                                         отримати
                                         вичерпні відомості про компанію чи приватну особу.
                                     </p>
                                 </div>
                             </div>
-                            <div class="portfolio-card">
-                                <h2 class="title">Проєкт Prime </h2>
-                                <p class="text">Маркетинг</p>
+                            <div class="portfolio__card">
+                                <h2 class="portfolio__card-title">Проєкт Prime </h2>
+                                <p class="portfolio__card-text">Маркетинг</p>
                             </div>
                         </a>
                     </li>
                     <li class="portfolio__item">
-                        <a href="" class="portfolio-list-link">
-                            <div class="pic-box">
+                        <a href="" class="portfolio__link">
+                            <div class="portfolio__pic-box">
                                 <img src="./images/project-boxes-min.jpg" alt="дві картонні коробки" width="370" height="294">
-                                <div class="overlay-portfolio">
+                                <div class="portfolio__overlay">
                                     <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
                                         отримати
                                         вичерпні відомості про компанію чи приватну особу.
                                     </p>
                                 </div>
                             </div>
-                            <div class="portfolio-card">
-                                <h2 class="title"> Проєкт Boxes</h2>
-                                <p class="text">Додаток</p>
+                            <div class="portfolio__card">
+                                <h2 class="portfolio__card-title"> Проєкт Boxes</h2>
+                                <p class="portfolio__card-text">Додаток</p>
                             </div>
                         </a>
                     </li>
                     <li class="portfolio__item">
-                        <a href="" class="portfolio-list-link">
-                            <div class="pic-box">
+                        <a href="" class="portfolio__link">
+                            <div class="portfolio__pic-box">
                                 <img src="./images/inspiration-has-no-borders-min.jpg" alt="монітор компютера із відкритою сторінкою" width="370" height="294">
-                                <div class="overlay-portfolio">
+                                <div class="portfolio__overlay">
                                     <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
                                         отримати
                                         вичерпні відомості про компанію чи приватну особу.
                                     </p>
                                 </div>
                             </div>
-                            <div class="portfolio-card">
-                                <h2 class="title"> Inspiration has no Borders</h2>
-                                <p class="text">Веб-сайт</p>
+                            <div class="portfolio__card">
+                                <h2 class="portfolio__card-title"> Inspiration has no Borders</h2>
+                                <p class="portfolio__card-text">Веб-сайт</p>
                             </div>
                         </a>
                     </li>
                     <li class="portfolio__item">
-                        <a href="" class="portfolio-list-link">
-                            <div class="pic-box">
+                        <a href="" class="portfolio__link">
+                            <div class="portfolio__pic-box">
                                 <img src="./images/magazine-limited-edition-min.jpg" alt="розгорнутий кольоровий журнал" width="370" height="294">
-                                <div class="overlay-portfolio">
+                                <div class="portfolio__overlay">
                                     <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
                                         отримати
                                         вичерпні відомості про компанію чи приватну особу.
                                     </p>
                                 </div>
                             </div>
-                            <div class="portfolio-card">
-                                <h2 class="title"> Видання Limited Edition</h2>
-                                <p class="text">Дизайн</p>
+                            <div class="portfolio__card">
+                                <h2 class="portfolio__card-title"> Видання Limited Edition</h2>
+                                <p class="portfolio__card-text">Дизайн</p>
                             </div>
                         </a>
                     </li>
                     <li class="portfolio__item">
-                        <a href="" class="portfolio-list-link">
-                            <div class="pic-box">
+                        <a href="" class="portfolio__link">
+                            <div class="portfolio__pic-box">
                                 <img src="./images/project-lab-min.jpg" alt="паперовий ярлик на мотузці" width="370" height="294">
-                                <div class="overlay-portfolio">
+                                <div class="portfolio__overlay">
                                     <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
                                         отримати
                                         вичерпні відомості про компанію чи приватну особу.
                                     </p>
                                 </div>
                             </div>
-                            <div class="portfolio-card">
-                                <h2 class="title"> Проєкт LAB</h2>
-                                <p class="text">Маркетинг</p>
+                            <div class="portfolio__card">
+                                <h2 class="portfolio__card-title"> Проєкт LAB</h2>
+                                <p class="portfolio__card-text">Маркетинг</p>
                             </div>
                         </a>
                     </li>
                     <li class="portfolio__item">
-                        <a href="" class="portfolio-list-link">
-                            <div class="pic-box">
+                        <a href="" class="portfolio__link">
+                            <div class="portfolio__pic-box">
                                 <img src="./images/growing-business-min.jpg" alt="дві руки на клавіатурі ноутбука" width="370" height="294">
-                                <div class="overlay-portfolio">
+                                <div class="portfolio__overlay">
                                     <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
                                         отримати
                                         вичерпні відомості про компанію чи приватну особу.
                                     </p>
                                 </div>
                             </div>
-                            <div class="portfolio-card">
-                                <h2 class="title">Growing Business </h2>
-                                <p class="text">Додаток</p>
+                            <div class="portfolio__card">
+                                <h2 class="portfolio__card-title">Growing Business </h2>
+                                <p class="portfolio__card-text">Додаток</p>
                             </div>
                         </a>
                     </li>
