--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <header class="header">
     
-        <div class="conteiner header__conteiner">
+        <div class="header__conteiner">
             <a href="./index.html" lang="en" class="logo header__logo">Web<span class="logo__part">Studio</span></a>
     
             <nav>
@@ -46,7 +46,7 @@
     </header>
    <main>
         <section class="hero">
-            <div class="conteiner hero__conteiner">
+            <div class="hero__conteiner">
              <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
              <button type="button" class="hero__btn" data-modal-open>Замовити послугу</button>
              <div class="backdrop backdrop--hidden" data-modal>
