--- a/portfolio.html
+++ b/portfolio.html
@@ -25,9 +25,9 @@
 
         <nav>
             <ul class="nav-list">
-                <li><a href="./index.html" class="nav-list__link">Студія</a></li>
-                <li><a href="./portfolio.html" class="nav-list__link nav-list__link--current">Портфоліо</a></li>
-                <li><a href="" class="nav-list__link">Контакти</a></li>
+                <li class="nav-list__item"><a href="./index.html" class="nav-list__link">Студія</a></li>
+                <li class="nav-list__item"><a href="./portfolio.html" class="nav-list__link nav-list__link--current">Портфоліо</a></li>
+                <li class="nav-list__item"><a href="" class="nav-list__link">Контакти</a></li>
             </ul>
         </nav>
 
